強制修復限紅Modal顯示問題 - 添加強制樣式和z-index

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -2970,8 +2970,10 @@
                 </div>
             </div>
             <!-- 調整會員限紅Modal -->
-            <div class="modal fade" id="adjustBettingLimitModal" tabindex="-1">
-                <div class="modal-dialog modal-lg">
+            <div class="modal fade" id="adjustBettingLimitModal" tabindex="-1" 
+                 style="z-index: 99999 !important;">
+                <div class="modal-dialog modal-lg" 
+                     style="margin: 1.75rem auto; max-width: 800px; position: relative; width: auto; pointer-events: auto;">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title">
