--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -2969,9 +2969,9 @@
                     </form>
                 </div>
             </div>
-            <!-- 全新的自定義限紅Modal -->
-            <div id="adjustBettingLimitModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); z-index: 99999;">
-                <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); max-width: 800px; width: 90%; max-height: 90vh; overflow-y: auto;">
+            <!-- 強化版自定義限紅Modal -->
+            <div id="adjustBettingLimitModal" style="display: none !important; position: fixed !important; top: 0 !important; left: 0 !important; width: 100% !important; height: 100% !important; background-color: rgba(0,0,0,0.5) !important; z-index: 999999 !important; pointer-events: auto !important;">
+                <div style="position: absolute !important; top: 50% !important; left: 50% !important; transform: translate(-50%, -50%) !important; background: white !important; border-radius: 8px !important; box-shadow: 0 4px 20px rgba(0,0,0,0.3) !important; width: 90% !important; max-width: 800px !important; max-height: 90vh !important; overflow-y: auto !important; pointer-events: auto !important;">
                     <!-- Modal Header -->
                     <div style="padding: 20px; border-bottom: 1px solid #dee2e6; display: flex; justify-content: space-between; align-items: center; background-color: #f8f9fa; border-radius: 8px 8px 0 0;">
                         <h5 style="margin: 0; font-weight: 600; color: #495057;">
