--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -2969,15 +2969,21 @@
                     </form>
                 </div>
             </div>
-            <!-- 強化版自定義限紅Modal -->
-            <div class="modal fade" id="adjustBettingLimitModal" tabindex="-1" aria-labelledby="adjustBettingLimitModalLabel" aria-hidden="true">
+        </div>
+    </div>
+    
+    <!-- 調整會員限紅 Modal - 使用v-if控制顯示 -->
+
+            <div v-if="showBettingLimitModal && isLoggedIn && user && user.id && modalSystemReady" 
+                 class="modal d-block" id="adjustBettingLimitModal" tabindex="-1" 
+                 style="background-color: rgba(0,0,0,0.5);">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="adjustBettingLimitModalLabel">
+                            <h5 class="modal-title">
                                 <i class="fas fa-sliders-h me-2"></i>調整會員限紅
                             </h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            <button type="button" class="btn-close" @click="hideBettingLimitModal"></button>
                         </div>
                         <div class="modal-body">
                             <!-- 載入狀態 -->
@@ -3057,7 +3063,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+                            <button type="button" class="btn btn-secondary" @click="hideBettingLimitModal">取消</button>
                             <button type="button" 
                                     class="btn btn-primary" 
                                     @click="submitBettingLimitAdjustment()"
@@ -3069,8 +3075,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
